fixed spacing in hansard content #974

--- a/pombola/core/static/sass/_south-africa_overrides.scss
+++ b/pombola/core/static/sass/_south-africa_overrides.scss
@@ -1331,7 +1331,7 @@ li.speech {
             hyphens: auto;
     br {
         content: ' ';
-        display: inline'
+        display: inline;
     }
     .hov {
         font-size: 0.75em;
